# CPP-courses

big_integer/: CMakeLists.txt  README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp  my_vector.cpp  my_vector.h
huffman_compressor/: CMakeLists.txt  README.md
huffman_compressor/huffman_file_working/: freader.cpp  freader.h  fwriter.cpp  fwriter.h
huffman_compressor/huffman_library/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman_tree.cpp  huffman_tree.h
huffman_compressor/huffman_testing/: testing.cpp  testing.h
huffman_compressor/huffman_utility/: compressor.cpp  compressor.h  runner.cpp  runner.h
list/: README.md  list.h
mandelbrot/: CMakeLists.txt  Dockerfile  README.md  conanfile.py
mandelbrot/benchmark/: description.txt  runner.py
mandelbrot/src/cli/: main.cpp
mandelbrot/src/mandelbrot/: mandelbrot.cpp  mandelbrot.hpp
multithreading/: CMakeLists.txt  README.md  conanfile.py
multithreading/benchmark/: description.txt  runner.py
multithreading/src/benchmark/: benchmark.cpp  benchmark.h
multithreading/src/cli/: main.cpp
multithreading/src/queue/: queue.cpp  queue.h
multithreading/src/spinlock/: spinlock.cpp  spinlock.h
multithreading/test/: CMakeLists.txt
multithreading/test/queue/: test.cpp
multithreading/test/spinlock/: test.cpp
opencl/: CMakeLists.txt  Dockerfile  README.md
opencl/include/: config.h
opencl/src/: main.cpp  scan.cl
opencl/test/: CMakeLists.txt
vector/: README.md  vector.h
